Fix hero spacing

--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -2,23 +2,21 @@
 .Hero {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
     padding-top: 15%;
     padding-bottom: 10%;
     padding-left: 5%;
     padding-right: 5%;
-    /* height: 100%; */
-    margin: auto;
-
-    /* background-color: lightblue; */
+    background-image: linear-gradient(white, rgb(194, 230, 252), white);
 }
 h1 {
     margin: 0px;
 }
 .textSection {
-    flex: 6;
     height: 100%;
-    margin: auto;
+    max-width: 350px;
     justify-content: center;
     padding: 2em;
 }
@@ -30,7 +28,7 @@ h1 {
 }
 .firstNameLeft {
     /* TODO: Add normal space and use pre-line etc */
-    padding-right: 1rem;
+    /* padding-right: 1rem; */
 }
 .firstNameLeft, .firstNameLeft:hover, 
 .firstNameRight, .firstNameRight:hover {
@@ -41,11 +39,13 @@ h1 {
     opacity: 0.8;
 }
 .image {
-    flex: 4;
-    width: 50%;
-    min-width: 300px;
-    max-width: 900px;
-    border-radius: 15%;
+    /* flex: 4; */
+    width: 400px; 
+    height: auto;
+    /* height: 400px; */
+    /* min-width: 300px;
+    max-width: 900px; */
+    border-radius: 20%;
     transition-duration: 0.5s;
 }
 .image:hover {
